[tool.poetry]
name = "pi-monitoring-y"
version = "0.1.0"
description = ""
authors = ["KAZY <kazypinksaurus@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyaudio = "^0.2.11"
SpeechRecognition = "^3.8.1"
requests = "^2.24.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
